# college-admission-assistant-rag

./: .env.example  .gitignore  README.md  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml  nightly_eval.yml
app/: __init__.py  config.py  dependencies.py  exceptions.py  models.py  observability.py
app/api/: main.py  middleware.py  v1.py
app/evals/: fast_eval.py  full_eval.py  latency_check.py  recommendation_quality.py
app/generation/: __init__.py  circuit_breaker.py  service.py
app/ingest/: __init__.py  manifests.py  sync_all.py  sync_college.py
app/official/: __init__.py  cache.py  corpus.py  corpus_manager.py  embedding.py  ingestion.py  query_normalizer.py  reranker.py  retrieval.py  service.py  vector_store.py
app/public_signals/: __init__.py  promo_detector.py  reddit_fetch.py  router.py  service.py  source_scorer.py  theme_extractor.py  transcript_parser.py  youtube_fetch.py
app/recommendation/: __init__.py  service.py  store.py
app/verification/: __init__.py  nli_verifier.py  service.py
config/: models.yaml  retrieval.yaml
config/prompts/: abstain.yaml  answer.yaml
data/: README.md  college_profiles.json  official_corpus.json
docs/: TESTING.md  student_preference_guide.md
evals/: README.md  golden_queries.jsonl
evals/reports/: fast_eval_report.json  full_eval_report.json  full_eval_report.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/: manifest.json
frontend/src/: App.jsx  api.js  data.js  storage.js
sources/colleges/: anna-university.yaml  bits-pilani.yaml  dtu.yaml  iiit-hyderabad.yaml  iit-bombay.yaml  iit-delhi.yaml  iit-kanpur.yaml  (+8 more)
tests/: conftest.py  test_api.py  test_college_profiles_data.py  test_full_eval.py  test_official_retrieval_and_verification.py  test_recommendation.py  test_router_and_analysis.py
(+43 files in other folders)
