[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "college-admission-assistant-rag"
version = "0.1.0"
description = "College admission assistant with official evidence and public signals analysis."
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "cachetools>=5.5.0",
  "chromadb>=1.0.0",
  "fastapi>=0.115.0",
  "google-genai>=1.12.1",
  "httpx>=0.27.0",
  "pydantic-settings>=2.6.1",
  "pypdf>=5.4.0",
  "pydantic>=2.8.0",
  "pyyaml>=6.0.2",
  "sentence-transformers>=3.3.1",
  "streamlit>=1.42.0",
  "uvicorn>=0.30.0",
  "youtube-transcript-api>=0.6.2",
  "yt-dlp>=2025.1.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.24.0",
  "ragas>=0.2.10",
  "ruff>=0.8.6",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
